nullaway_error_526a49d4-9e10-4c6d-87a6-11f02a23d970.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapObject.java:343: error: [NullAway] unboxing of a @Nullable value
      return this.y - map.getChunkOffsetY() * map.getTileHeight();
                 ^
    (see http://t.uber.com/nullaway )
